syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.leoferamos.grpc.order";
option java_outer_classname = "OrderProto";

package order;

message OrderRequest {
  string user_id = 1;
  string restaurant_id = 2;
  repeated string items = 3;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
}

service OrderService {
  rpc CreateOrder(OrderRequest) returns (OrderResponse);
}
